core/src/test/resources/configurations/invalid/instanceof-very-imbricated-invalid-property.instances
instanceof wrapper {
	instanceof vm {
		name: my-vm;
		instanceof server {
			name=
		}
	}
}